[metadata]

name = apollopayment_api
version = 0.0.7
author = Apollopayment Team
author_email = support@apollopayment.io
description = SDK for Apollopayment API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/apollopayment/python_sdk
project_urls =
    Bug Tracker = https://github.com/apollopayment/python_sdk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests >= 2.28.0

[options.packages.find]
where = src
